fix(style): modal z-above searchbar
 - fix issue where searchbox on home page overlapped modal

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -16,6 +16,7 @@
 @import "search.less";
 @import "home.less";
 @import "fonts.less";
+@import "modal.less";
 @import "../scripts/components/styles.less";
 
 html, body {
@@ -39,7 +40,7 @@ abbr {
 }
 .navbar-nav > li > a {
   padding-left: 13px;
-  padding-right: 13px;  
+  padding-right: 13px;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
@@ -327,8 +328,8 @@ p, ul, ol {
 }
 
 dt {
-  font-weight: bold; 
-  color:#66581c; 
+  font-weight: bold;
+  color:#66581c;
 }
 
 dd {
